@@ -1,3 +1,9 @@
+2009-09-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/scplugin.c:
+   Remove more unused code.
+
+
 2009-08-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/gui.c:
